--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "自己动手搭建vue-cli",
   "main": "index.js",
   "scripts": {
-    "dev":"webpack-dev-serve --open --progress",
+    "dev": "webpack-dev-server --hot --open --progress",
+    "start": "webpack-dev-server --hot --open --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +21,21 @@
   "bugs": {
     "url": "https://github.com/zhaodengping/vue-cli/issues"
   },
-  "homepage": "https://github.com/zhaodengping/vue-cli#readme"
+  "homepage": "https://github.com/zhaodengping/vue-cli#readme",
+  "devDependencies": {
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "vue": "^2.6.10",
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^15.7.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
+  },
+  "dependencies": {
+    "vue-template-compiler": "^2.6.10"
+  }
 }
